.deprecated/cicd/tekton/tekton-dashboard-ingress.yml
---
# OVERWRITE OF RELEASE VERSION
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.12.0
    dashboard.tekton.dev/release: v0.12.0
    version: v0.12.0
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9097
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tektoningress
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: tekton-lb-service
  namespace: tekton-pipelines
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9097
  selector:
    app: tekton-dashboard
  type: LoadBalancer
  loadBalancerIP: 192.168.6.88

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-tls
  namespace: tekton-pipelines
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`tekton.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: tekton-dashboard
      port: 80
  tls:
    secretName: tekton-bas-tls
